Fix z-index for waves-effect

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -5,6 +5,10 @@ body{
     background-color: #f5f5f5;
 }
 
+.waves-effect{
+    z-index: initial;
+}
+
 header{
     display: flex;
     height: 200px;
@@ -317,6 +321,7 @@ see https://github.com/metafizzy/packery/issues/8 */
     transition: box-shadow 0.2s;
 }
 .packery-object.is-dragging {
+    z-index: 1000000;
     box-shadow: 0 10px 30px rgba(100,100,100,0.1), 0 8px 10px rgba(100,100,100,0.2)
 }
 
